--- a/.githhub/workflows/pre_commit.yml
+++ b/.githhub/workflows/pre_commit.yml
@@ -1,7 +1,10 @@
 name: Pre-Commit
 
 on:
-  [push, pull_request]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -16,8 +19,17 @@ jobs:
       with:
         python-version: 3.9
 
-    - name: Install pre-commit
-      run: pip install pre-commit
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run pre-commit on all files
-      run: pre-commit run --all files
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 .
+
+    - name: Run tests with pytest
+      run: |
+        pip install pytest
+        pytest
